引入网关作为后端服务的入口处 网关处理着所有到后端服务的请求  包括登陆校验 配置路由规则  编写globalfilter过滤器 配合springMVC的拦截器使用（获取到当前用户，存储到usercontext里面（封装的threadlocal））  ，，非常重要的操作是对各个微服务之间信息的转发，也就是在业务逻辑比较复杂的情况下，例如一个查询信息的请求需要对当前的比如商品服务，购物车服务等等都要操作，从而必须进行上游的微服务到下游的微服务进行信息的传输  因为调用下游的微服务时 下游必须知道当前的用户是谁  所以使用openfeign来传递上游到下游的信息  对请求头进行操作  还有就是对于配置管理的操作，（均在注册中心nacos进行）包括共享配置（是springcloud拉取nacos的，在springboot拉取application.yaml文件之前，所以要定义bootstrap.yaml文件），配置的热更新，还有动态路由，共享配置是为了避免定义重复的配置在服务的yaml文件之中，配置热更新则是为了不让每次更改配置的时候 必须中断服务来重启，例如修改购物车最大加入商品的数量 这些有可能会变化的规则，最后是动态路由，动态路由就是和配置热更新有点类似，就是为了发布新的路由规则，避免服务重启打断连接使用。。 总结以下：定义了网关对后端的微服务进行过滤，判断，

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,10 @@
         <module>item-serv</module>
         <module>hm-api</module>
         <module>trade-service</module>
-
+        <module>hm-gateway</module>
+        <module>user-service</module>
+        <module>cart-service</module>
+        <module>pay-service</module>
 
     </modules>
 
