feat(cart-service): 添加消息队列和 Seata 支持
- 在 cart-service 中添加了 RabbitMQ 和 Seata 相关的依赖
- 新增了购物车清理功能的 MQ 消息发送逻辑
- 添加了 Seata 全局事务注解 @GlobalTransactional- 新增了 ItemClient 的降级处理实现类 ItemClientFallback- 在 trade-service 中添加了支付成功消息的 MQ 监听器
 使用sentinel实现请求限流  使用fallbackfactory来实现  服务的降级  和 服务熔断

--- a/hm-gateway/pom.xml
+++ b/hm-gateway/pom.xml
@@ -47,6 +47,16 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
         </dependency>
+        <!--nacos 服务注册发现-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+        <!--消息发送-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${project.artifactId}</finalName>
